--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url("./styles/head.css");
+@import url("./styles/settings.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,7 +17,8 @@
 }
 
 body {
+  box-sizing: border-box;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: FarsiFont,Arial, Helvetica, sans-serif;
 }
